K8s/backend-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP   # Changed from NodePort
  selector:
    app: auth
  ports:
    - port: 8000
      targetPort: 8000
