K8s/backend-orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: ClusterIP   # change from NodePort
  selector:
    app: orders
  ports:
    - port: 8000
      targetPort: 8000
